--- a/_output.yml
+++ b/_output.yml
@@ -4,12 +4,11 @@ bookdown::pdf_book:
     after_body: postamble.tex
   citation_package: natbib
   keep_tex: yes
+  pandoc_args: [ "--csl", "apa.csl" ]
 bookdown::epub_book: default
-bookdown::html_book:
-    css: toc.css
-    pandoc_args: [ "--csl", "apa.csl" ]
 bookdown::gitbook:
   css: style.css
+  highlight: monochrome
   pandoc_args: [ "--csl", "apa.csl" ]
   config:
     toc:
