--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,30 +9,29 @@ delete_merged_file: TRUE
 rmd_files: [
   "index.rmd",
   
-  "part1/definitions.Rmd",
-  "part1/R.Rmd",
+  "part1/01_EMA.Rmd",
+  "part1/02_R.Rmd",
 
-  "part2/study-design.Rmd",
-  "part2/instruments.Rmd",
-  "part2/datamanagement.Rmd",
+  "part2/03_study-design.Rmd",
+  "part2/04_instruments.Rmd",
+  "part2/05_datamanagement.Rmd",
   
-  "part3/features.Rmd",
-  "part3/lmm.Rmd",
-  "part3/timeseries.Rmd",
-  "part3/networks.Rmd",
+  "part3/06_features.Rmd",
+  "part3/07_lmm.Rmd",
+  "part3/08_timeseries.Rmd",
+  "part3/09_networks.Rmd",
   
-  "part4/mood.Rmd",
-  "part4/activity.Rmd",
-  "part4/context.Rmd",
+  "part4/10_mood.Rmd",
+  "part4/11_activity.Rmd",
+  "part4/12_context.Rmd",
   
-  "part5/csd.Rmd",
-  "part5/caspar.Rmd",
-  "part5/homerange.Rmd",
+  "part5/13_csd.Rmd",
+  "part5/14_caspar.Rmd",
+  "part5/15_homerange.Rmd",
   
-  "part6/aph-catalogue.Rmd",
-  "part6/instruments_catalogue.Rmd",
-  "part6/R-package-catalogue.Rmd",
-  #"part6/other-catalogue.Rmd",
+  "part6/16_aph-catalogue.Rmd",
+  "part6/17_instruments_catalogue.Rmd",
+  "part6/18_R-package-catalogue.Rmd",
 
   "part7/acknowledgements.Rmd",
   "part7/references.Rmd"
