--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -18,7 +18,7 @@ rmd_files: [
   
   # part II
   "study-design.Rmd",
-  "instruments.Rmd",
+  # "instruments.Rmd",
   "datamanagement.Rmd",
   
   # part III
