--- a/_output.yml
+++ b/_output.yml
@@ -17,4 +17,6 @@ bookdown::gitbook:
       before: |
         <li><a href="./">EMA research Manual</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="http://jruwaard.nl" target="blank">Jeroen Ruwaard</a></li>
+        <li><a href="https://https://www.linkedin.com/in/lisakooistra/?originalSubdomain=nl" target="blank">Lisa Kooistra</a></li>
+        <li><a href="https://www.linkedin.com/in/melissa-thong-76977331/" target="blank">Melissa Thong</a></li>
